--- a/style.css
+++ b/style.css
@@ -79,8 +79,8 @@ header h2 {
 /*wrapper*/
 .wrapper {
     min-height: 100%;
-    text-align: ;
-    color: #000000;
+    text-align: -[];
+    color: #fff;
     margin: auto;
     padding: 0px;
     bottom: 0;
@@ -95,16 +95,18 @@ header h2 {
     width: 70%;
 }
 .list-b1 {
-    border: 5px solid #000000;
-    width: 80%;
+    border: 2px solid #000;
+    width: 90%;
     margin: 40px;
     padding: 30px;
-    display: flex;
+    display: grip;
+    grid-template-columns: repeat(3, 2fr);
 }
 .list-b1 img {
     width: 120px;
     height: 120px;
     margin: 30px 10px;
+    text-align: center;
 }
 .list-b1 p {
     margin-bottom: 20px;
@@ -112,20 +114,32 @@ header h2 {
 .list-b1 button {
     width: 20px;
     height: 20px;
-    margin-top: 150px;
     background: rgba(60, 2, 114, 0.9);
+    float: right;
 }
 .list-b1 button:hover {
     opacity: 0.5;
 }
-.cart-list {
-    width: 300px;
+.order {
+    width: 30%;
     height: 400px;
     margin: 45px 20px 20px 20px;
     padding: 30px;
-    display: f;
-    border: 4px solid #000000;
+    border: 2px solid #0c0c0c;
 }
+.order button {
+    float: right;
+}
+.order-row {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.order-total {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    border-top: 2px solid #5a5a5a;
+}
+
 
 /*footer*/
 footer {
@@ -188,6 +202,9 @@ footer .footer-bottom {
         width: 95%;
         margin: 20px 10px;
     }
+    .order {
+        width: 90%;
+    }
     /*footer*/
     footer {
         height: 500px;
@@ -232,4 +249,16 @@ footer .footer-bottom {
     }
 
 
+}
+@media(max-width: 1024px) {
+    .menu-list {
+        width: 100%;
+    }
+    .list-b1 {
+        width: 95%;
+        margin: 20px 10px;
+    }
+    .order {
+        width: 90%;
+    }
 }
